@@ -1,4 +1,0 @@
-/**
- * All of the CSS for your admin-specific functionality should be
- * included in this file.
- */
