@@ -30,6 +30,7 @@ Started date: 2020-15-08
 ## [1.0.0] - 2020-16-08
 ### Added
 - Dashicon Icon
+- Added checkboxes on Control Center
 
 ### Changed
 - 
